# master_thesis_ros

./: .gitignore  README.md
ROSbags/: 2023-07-07-11-42-01.bag  2023-07-20-19-16-30.bag  temp_bag.bag
catkin_ws/: .gitignore  builder.sh
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  _setup_util.py  setup.sh
catkin_ws/devel/.private/file_server/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/.private/kiss_icp/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/.private/master_thesis_kremmel/: .catkin  .rosinstall
catkin_ws/devel/.private/roboticsgroup_upatras_gazebo_plugins/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/taurob_tracker_control/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/taurob_tracker_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/.private/taurob_tracker_gazebo/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/include/file_server/: GetBinaryFile.h  GetBinaryFileRequest.h  GetBinaryFileResponse.h  SaveBinaryFile.h  SaveBinaryFileRequest.h  SaveBinaryFileResponse.h
catkin_ws/devel/lib/file_server/: file_server
catkin_ws/devel/lib/kiss_icp/: odometry_node
catkin_ws/devel/lib/master_thesis_kremmel/: LandMarkCornerDetector
catkin_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  file_server.pc  kiss_icp.pc  master_thesis_kremmel.pc  roboticsgroup_upatras_gazebo_plugins.pc  taurob_tracker_control.pc  taurob_tracker_description.pc  taurob_tracker_gazebo.pc
catkin_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
catkin_ws/devel/share/file_server/cmake/: file_server-msg-extras.cmake  file_server-msg-paths.cmake  file_serverConfig-version.cmake  file_serverConfig.cmake
catkin_ws/devel/share/kiss_icp/cmake/: kiss_icpConfig-version.cmake  kiss_icpConfig.cmake
catkin_ws/devel/share/master_thesis_kremmel/cmake/: master_thesis_kremmelConfig-version.cmake  master_thesis_kremmelConfig.cmake
catkin_ws/devel/share/roboticsgroup_upatras_gazebo_plugins/cmake/: roboticsgroup_upatras_gazebo_pluginsConfig-version.cmake  roboticsgroup_upatras_gazebo_pluginsConfig.cmake
catkin_ws/devel/share/taurob_tracker_control/cmake/: taurob_tracker_controlConfig-version.cmake  taurob_tracker_controlConfig.cmake
catkin_ws/devel/share/taurob_tracker_description/cmake/: taurob_tracker_descriptionConfig-version.cmake  taurob_tracker_descriptionConfig.cmake
catkin_ws/src/: .rosinstall
catkin_ws/src/master_thesis_kremmel/: CMakeLists.txt  package.xml
catkin_ws/src/master_thesis_kremmel/config/: rviz.rviz
catkin_ws/src/master_thesis_kremmel/data/: stored_landmarks.json  template.json
catkin_ws/src/master_thesis_kremmel/launch/: launch-DESKTOP-POUAEPV.launch  launch.launch
catkin_ws/src/master_thesis_kremmel/models/test_world/: model.config  model.sdf
catkin_ws/src/master_thesis_kremmel/src/: EKFslam.cpp  cornerDetection.cpp  ekfSlam.cpp  ekfSlam_triedNewMotionModel.cpp  ekfSlam_triedUsingInverseKinematics.cpp  evaluator.cpp  icp_test.cpp  landmarkProcessing.cpp  laserScanProcessing.cpp  prediction_test.cpp  pubToCmdVel.cpp  transformLaserScan.cpp
catkin_ws/src/master_thesis_kremmel/worlds/: test_world.world
catkin_ws/src/taurob_tracker_control/config/: taurob_tracker_control.yaml
catkin_ws/src/taurob_tracker_control/launch/: taurob_tracker_control.launch
catkin_ws/src/taurob_tracker_description/urdf/: VLP-16.urdf.xacro  flir_a35_camera.urdf.xacro  sick_lms1xx.urdf.xacro  taurob_tracker.gazebo  taurob_tracker_flipper.xacro
catkin_ws/src/taurob_tracker_gazebo/launch/: taurob_tracker_indoor_world.launch  taurob_tracker_outdoor_world.launch
(+62 files in other folders)
